[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/AssetsFinals/Levels/EscenarioPolla.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Mapa entero/DealerRoom.gd" type="Script" id=2]
[ext_resource path="res://src/dialeg/DialerDialog.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="DealerRoom" type="Node2D"]
script = ExtResource( 2 )

[node name="escaels" type="Sprite" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 4, 4.02605 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 660.097, 248.732 )
scale = Vector2( 14.9418, 21.048 )
shape = SubResource( 1 )

[node name="DealerDialog" parent="." instance=ExtResource( 3 )]
margin_left = 263.922
margin_top = 420.621
margin_right = 263.922
margin_bottom = 420.621
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="answer" from="DealerDialog" to="." method="_on_DealerDialog_answer"]

[editable path="DealerDialog"]
